# serializer version: 1
# name: TestAlbumMutations.test_create_album
  dict({
    'createAlbum': dict({
      'albumArtistId': 1,
      'id': 1,
      'title': 'Test Album',
    }),
  })
# ---
# name: TestAlbumMutations.test_create_albums_batch
  dict({
    'createAlbums': list([
      dict({
        'albumArtistId': 1,
        'id': 1,
        'musicbrainzAlbumid': None,
        'title': 'Batch Album 1',
      }),
      dict({
        'albumArtistId': 1,
        'id': 2,
        'musicbrainzAlbumid': None,
        'title': 'Batch Album 2',
      }),
    ]),
  })
# ---
# name: TestAlbumMutations.test_upsert_album
  dict({
    'upsertAlbum': dict({
      'albumArtistId': 1,
      'id': 1,
      'title': 'Upsert Test Album',
    }),
  })
# ---
# name: TestArtistMutations.test_create_artist
  dict({
    'createArtist': dict({
      'id': 1,
      'musicbrainzArtistid': 'test-mb-artist-id',
      'name': 'Test Artist',
    }),
  })
# ---
# name: TestArtistMutations.test_create_artists_batch
  dict({
    'createArtists': list([
      dict({
        'id': 1,
        'name': 'Batch Artist 1',
      }),
      dict({
        'id': 2,
        'name': 'Batch Artist 2',
      }),
    ]),
  })
# ---
# name: TestArtistMutations.test_upsert_artist
  dict({
    'upsertArtist': dict({
      'id': 1,
      'musicbrainzArtistid': None,
      'name': 'Upsert Test Artist',
    }),
  })
# ---
